--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-query": "^3.28.0",
     "tailwindcss": "^2.2.17",
     "typescript": "^4.3.2",
-    "vite": "^2.6.4"
+    "vite": "^2.6.4",
+    "vite-tsconfig-paths": "^3.3.17"
   }
 }
